--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -2,12 +2,11 @@
 <html lang = "en">
 <head>
     <meta charset = "UTF-8">
-    <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+    <meta http-equiv = "X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href = "./recipes/meatloaf.html">Meatloaf recipe</a>
+    <h1>Meatloaf Recipe</h1>
 </body>
 </html>
