--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset = "UTF-8">
     <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href = "./recipes/meatloaf.html">Meatloaf recipe</a>
+    <ul>
+        <li>
+            <a href = "./recipes/meatloaf.html">Meatloaf recipe</a>
+        </li>
+        <li>
+            <a href = "./recipes/guacamole.html">Guacamole recipe</a>
+        </li>
+        <li>
+            <a href = "./recipes/fudge.html">Fudge recipe</a>
+        </li>
+    </ul>
 </body>
 </html>
