--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -4,11 +4,11 @@
     <meta charset = "UTF-8">
     <meta http-equiv = "X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meatloaf Recipe</title>
 </head>
 <body>
     <h1>Meatloaf Recipe</h1>
-    <img src = "../images/meatloaf.jpeg" scr = "Image of meatloaf"/>
+    <img src = "../images/meatloaf.jpeg" alt = "Image of meatloaf"/>
     <h3>Description</h3>
     <p>This is a very easy and no fail recipe for meatloaf. It won't take long to make at all, and it's quite good!</p>
     <h3>Ingredients</h3>
